--- a/1-app-electron/package.json
+++ b/1-app-electron/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "1-app-electron",
-    "version": "1.0.0",
-    "description": "primera app JAreina ELECTRON",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
+  "name": "1-app-electron",
+  "version": "1.0.0",
+  "description": "primera app JAreina ELECTRON",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
     "app",
     "electron"
   ],
-    "author": "JAreina",
-    "license": "MIT"
+  "author": "JAreina",
+  "license": "MIT",
+  "dependencies": {
+    "electron": "^1.7.10"
+  }
 }
